--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
             <h3>Portfolio</h3>
         </div>
         <div class="bio">
-            Over 8 years of progressive and hands on IT experience in Software Development, Design and Integration. Essayed roles of Technology Lead and Full Stack Developer on various projects utilizing a wide range of underlying technologies.
+            Over 10 years of progressive and hands on IT experience in Software Development, Design and Integration. Essayed roles of Technology Lead and Full Stack Developer on various projects utilizing a wide range of underlying technologies.
         </div>
         <div class="sub-bio">
         <div class="interests">
@@ -13,9 +13,9 @@
                 Interests
             </div>
             <ul>
-                <li>Dev Ops</li>
-                <li>Mobile Development</li>
-                <li>Integration</li>
+                <li>Generative AI</li>
+                <li>Machine Learning</li>
+                <li>Robotics</li>
             </ul>
         </div>
         <div class="education">
@@ -67,7 +67,7 @@
             </div>
             
             <h4>Java</h4>
-                <h6>Spring,Maven</h6>
+                <h6>Spring</h6>
         </div>
         <div class="item col-12 col-sm-4">
             <div class="skill-icon">
@@ -82,7 +82,7 @@
             <i class="fab fa-aws"></i>
             </div>
             <h4>Cloud Engineering</h4>
-                <h6>AWS,Azure Logic Apps</h6>
+                <h6>AWS,Azure</h6>
         </div>
 
         <div class="item col-12 col-sm-4">
@@ -90,7 +90,7 @@
             <i class="fab fa-docker"></i>
             </div>
             <h4>DevOps</h4>
-                <h6>Docker,Jenkins</h6>
+                <h6>Docker,Kubernetes</h6>
         </div>
 
         <div class="item col-12 col-sm-4">
@@ -118,20 +118,77 @@
         </div>
         <div class="container">
             <div class="main-timeline">
-            
-                                    <!-- start experience section-->
+
+                <!-- start nfcu experience section-->
+                <div class="timeline">
+                    <div class="icon"></div>
+                    <div class="date-content">
+                        <div class="date-outer">
+                            <span class="date">
+                                    <span class="month">1 Year</span>
+                            <span class="year">2023-</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="timeline-content">
+                        <h5 class="title">Software Engineer III</h5>
+                        <h6 class="org">Navy Federal Credit Union</h6>
+                    
+                        <ul>
+                            <li>
+                                Design & Development of backend microservices using Java/J2EE framework i.e. Spring
+                            </li>
+                            <li>
+                                Development of api proxies using Mulesoft and Managing the Azure Kubernetes container orchestraLon
+                            </li>
+                            <li>
+                                Development of web application integration layer with Cloud technology i.e. Azure
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- end experience section-->
+
+                <!-- start fidelity experience section-->
                                     <div class="timeline">
                                         <div class="icon"></div>
                                         <div class="date-content">
                                             <div class="date-outer">
                                                 <span class="date">
-                                                        <span class="month">1 Year</span>
-                                                <span class="year">2020-</span>
+                                                        <span class="month">0.4 Year</span>
+                                                <span class="year">2023</span>
                                                 </span>
                                             </div>
                                         </div>
                                         <div class="timeline-content">
-                                            <h5 class="title">Technology Lead</h5>
+                                            <h5 class="title">Senior Software Developer</h5>
+                                            <h6 class="org">Hexaware Technologies</h6>
+                                        
+                                            <ul>
+                                                <li>
+                                                    Design & Development of web application modules & microservices using Java/J2EE framework i.e. Spring
+                                                </li>
+                                                <li>
+                                                    Managing the AWS docker container orchestraLon
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <!-- end experience section-->
+            
+                                    <!-- start hex experience section-->
+                                    <div class="timeline">
+                                        <div class="icon"></div>
+                                        <div class="date-content">
+                                            <div class="date-outer">
+                                                <span class="date">
+                                                        <span class="month">3 Years</span>
+                                                <span class="year">2020</span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="timeline-content">
+                                            <h5 class="title">Senior Software Developer</h5>
                                             <h6 class="org">Hexaware Technologies</h6>
                                         
                                             <ul>
@@ -145,7 +202,10 @@
                                                     Development of web application integration layer with Cloud technology i.e. AWS
                                                 </li>
                                                 <li>
-                                                    Development of automation layer for the web application using Protractor framework
+                                                    Development of automation layer for the web ui using Protractor framework
+                                                </li>
+                                                <li>
+                                                    Development of automation layer for the backend apis using Karate and PACT framework
                                                 </li>
                                             </ul>
                                         </div>
