--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,24 +63,28 @@
         
         <div class="item col-12 col-sm-4">
             <div class="skill-icon">
-                <i class="fab fa-java"></i>
+                <i class="fab fa-java"></i>&nbsp;
+                <i class="fab fa-python"></i>
             </div>
             
-            <h4>Java</h4>
-                <h6>Spring</h6>
+            <h4>Core</h4>
+                <h6>Java,Python</h6>
         </div>
         <div class="item col-12 col-sm-4">
             <div class="skill-icon">
             <i class="fab fa-angular"></i>
             </div>
-            <h4>Angular</h4>
+            <h4>UI</h4>
                 <h6>Angular,Typescript</h6>
         </div>
 
         <div class="item col-12 col-sm-4">
-            <div class="skill-icon">
-            <i class="fab fa-aws"></i>
+          
+           <div class="skill-icon">
+            <i class="fab fa-aws"></i>&nbsp;
+            <i class="fab fa-microsoft"></i>
             </div>
+            
             <h4>Cloud Engineering</h4>
                 <h6>AWS,Azure</h6>
         </div>
@@ -162,14 +166,14 @@
                                         </div>
                                         <div class="timeline-content">
                                             <h5 class="title">Senior Software Developer</h5>
-                                            <h6 class="org">Hexaware Technologies</h6>
+                                            <h6 class="org">Fidelity Investments</h6>
                                         
                                             <ul>
                                                 <li>
                                                     Design & Development of web application modules & microservices using Java/J2EE framework i.e. Spring
                                                 </li>
                                                 <li>
-                                                    Managing the AWS docker container orchestraLon
+                                                    Managing the AWS docker container orchestration
                                                 </li>
                                             </ul>
                                         </div>
