--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,7 @@
     </div>
     <div class="social-icons col-sm-2 col-md-3 col-lg-2">
 
-      <a target="_blank" href="https://twitter.com/shanky0909"> <i class="icon fa fa-twitter"></i>
+      <a target="_blank disabled" href="https://x.com/imshankar0909"> <i class="icon fa fa-twitter"></i>
       </a>
 
     </div>
