--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -129,13 +129,13 @@
                     <div class="date-content">
                         <div class="date-outer">
                             <span class="date">
-                                    <span class="month">1 Year</span>
+                                    <!-- <span class="month">1 Year</span> -->
                             <span class="year">2023-</span>
                             </span>
                         </div>
                     </div>
                     <div class="timeline-content">
-                        <h5 class="title">Software Engineer III</h5>
+                        <h5 class="title">Senior Systems Engineer</h5>
                         <h6 class="org">Navy Federal Credit Union</h6>
                     
                         <ul>
