--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-sm-6 col-md-6 col-lg-6">
       <i class="icon fa fa-envelope"></i>
-    <a class="a-desc" href="mailto:mail@shankarsharma.me">ss@shankarsharma.me</a>
+    <a class="a-desc" href="mailto:mail@shankarsharma.me">ss&#64;shankarsharma.me</a>
     </div>
 </div>
 <div class="row">
@@ -33,7 +33,7 @@
       <div class="col-sm-3 col-md-3 col-lg-2"><label>Twitter:</label></div>
       <div class="col-sm-6 col-md-6 col-lg-6">
         <i class="icon fa fa-twitter"></i>
-        <a class="a-desc" target="_blank" href="https://x.com/imshankar0909">@imshankar0909</a>
+        <a class="a-desc" target="_blank" href="https://x.com/imshankar0909">&#64;imshankar0909</a>
       </div>
 </div>
 </div>
