--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -312,9 +312,14 @@
     </div>
    
 </div>
+<script
+	type="module"
+	src="https://gradio.s3-us-west-2.amazonaws.com/5.38.2/gradio.js"
+></script>
 </section>
 <div class="footer">
     <div class="foot-content">
        <p> &#169;shankarsharma.me </p>
     </div>
   </div>  
+  
